--- a/trunk/modules/Hydrogen/Admin/Mail/locales/de/admin/mail/attachment.ini
+++ b/trunk/modules/Hydrogen/Admin/Mail/locales/de/admin/mail/attachment.ini
@@ -3,8 +3,21 @@
 0						= "inaktiv"
 1						= "aktiv"
 
+[filter]
+heading					= "Filter"
+labelStatus				= "Verwendung"
+labelClass				= "E-Mail-Klasse"
+labelFile				= "Datei"
+buttonFilter			= "filtern"
+buttonReset				= "zurücksetzen"
+
 [index]
 heading					= "Mail-Anhänge"
+headFile				= "Datei"
+headClass				= "E-Mail-Klasse"
+headCreatedAt			= "angehangen"
+headActions				= "Aktion"
+noEntries				= "Keine Anhänge registriert."
 
 [add]
 heading					= "Neuer Anhang"
@@ -30,4 +43,8 @@ successDisabled			= "Der Anhang &quot;%s&quot; wurde für die E-Mail-Klasse &quo
 successUploaded			= "Datei wurde hochgeladen. Sie kann nun als Anhang einer E-Mail-Klasse registriert werden."
 successRemoved			= "Die Datei &quot;%s&quot; wurde als Anhang für die E-Mail-Klasse &quot;%s&quot; entfernt."
 errorIdInvalid			= "Dieser Anhang existiert nicht."
+errorClassMissing		= "Keine E-Mail-Klasse angegeben."
+errorFileMissing		= "Keine Datei angegeben."
+errorAlreadyRegistered	= "Die Datei &quot;%s&quot; ist bereits als Anhang für die E-Mail-Klasse &quot;%s&quot; registriert."
+errorFileNotExisting	= "Die Datei &quot;%s&quot; existiert nicht."
 errorUploadFailed		= "Das Speichern der neuen Datei ist fehlgeschlagen."
