--- a/trunk/modules/Hydrogen/Admin/Mail/locales/de/admin/mail/attachment.ini
+++ b/trunk/modules/Hydrogen/Admin/Mail/locales/de/admin/mail/attachment.ini
@@ -24,6 +24,7 @@ heading					= "Neuer Anhang"
 labelFile				= "Datei"
 labelClass				= "Mail-Klasse"
 labelStatus				= "Verwendung"
+labelLanguage			= "Sprache <small class='muted'>(z.B. de, en, fr)</small>"
 buttonCancel			= "zurück"
 buttonSave				= "registrieren"
 
