--- a/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
+++ b/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
@@ -16,6 +16,7 @@ buttonAdd			= "neue Mission"
 buttonFilter		= "filtern"
 buttonReset			= "alle"
 suffixTime			= "Uhr"
+messageLoadingList	= "Lade Aufgaben und Termine..."
 
 [add]
 legend					= "Aufgabe/Termin hinzufügen"
