--- a/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
+++ b/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
@@ -42,196 +42,199 @@ buttonCancel			= "zur Liste"
 buttonSave				= "speichern"
 msgSuccess				= "Die Aufgabe wurde hinzugefügt."
 msgNoContent			= "Der Inhalt fehlt."
+msgNotEditor			= "Das Recht zum Erstellen neuer Aufgaben wurde nicht vergeben."
 
 [edit]
-legend				= "Aufgabe/Termin bearbeiten"
-labelType			= "Typ"
-labelPriority		= "Priorität"
-labelStatus			= "Status"
+legend					= "Aufgabe/Termin bearbeiten"
+labelType				= "Typ"
+labelPriority			= "Priorität"
+labelStatus				= "Status"
 labelDayWork			= "Tag"
-labelDayDue			= "Fällig am"
-labelDayStart		= "Starttag"
-labelDayEnd			= "Endtag"
-labelTime			= "Zeit"
-labelTimeStart		= "Startzeit"
-labelTimeEnd		= "Endzeit"
-labelHoursProjected	= "geplant"
-labelHoursRequired	= "benötigt"
+labelDayDue				= "Fällig am"
+labelDayStart			= "Starttag"
+labelDayEnd				= "Endtag"
+labelTime				= "Zeit"
+labelTimeStart			= "Startzeit"
+labelTimeEnd			= "Endzeit"
+labelHoursProjected		= "geplant"
+labelHoursRequired		= "benötigt"
 labelMinutesProjected	= "Planzeit&nbsp;<small class='muted'>(hh:mm)</small>"
 labelMinutesRequired	= "Arbeitszeit&nbsp;<small class='muted'>(hh:mm)</small>"
-labelTitle			= "Titel"
-labelContent		= "Beschreibung"
-labelLocation		= "Ort"
-labelReference		= "Referenz"
-labelWorker			= "Bearbeiter"
-labelProjectId		= "Projekt"
-buttonList			= "zur Liste"
-buttonCancel		= "abbrechen"
-buttonView			= "anzeigen"
-buttonSave			= "speichern"
-buttonRemove		= "entfernen"
-msgSuccess			= "Der Eintrag wurde gespeichert."
-msgSuccessClosed	= "Der Eintrag wurde geschlossen."
-msgNoContent		= "Der Inhalt fehlt."
-msgInvalidId		= "Der gewählte Eintrag existiert nicht. Weiterleitung zur Übersicht."
-msgInvalidProject	= "Der gewählte Eintrag ist einem fremden Projekt zugewiesen. Weiterleitung zur Übersicht."
+labelTitle				= "Titel"
+labelContent			= "Beschreibung"
+labelLocation			= "Ort"
+labelReference			= "Referenz"
+labelWorker				= "Bearbeiter"
+labelProjectId			= "Projekt"
+buttonList				= "zur Liste"
+buttonCancel			= "abbrechen"
+buttonView				= "anzeigen"
+buttonSave				= "speichern"
+buttonRemove			= "entfernen"
+msgSuccess				= "Der Eintrag wurde gespeichert."
+msgSuccessClosed		= "Der Eintrag wurde geschlossen."
+msgNoContent			= "Der Inhalt fehlt."
+msgInvalidId			= "Der gewählte Eintrag existiert nicht. Weiterleitung zur Übersicht."
+msgInvalidProject		= "Der gewählte Eintrag ist einem fremden Projekt zugewiesen. Weiterleitung zur Übersicht."
+msgNotEditor			= "Das Recht zum Bearbeiten von Aufgaben wurde nicht vergeben."
 
 [edit-panel-close]
-heading				= "Abschliessen"
-labelHours			= "Arbeitsstunden"
-suffixHours			= "h"
-buttonSave			= "speichern und abschliessen"
-buttonSaveConfirm	= "Ist diese Aufgabe wirklich beendet?"
-buttonClose			= "beenden"
-buttonCloseConfirm	= "Ist diese Aufgabe wirklich beendet?"
-buttonCancel		= "abbrechen"
-buttonCancelConfirm	= "Diese Aufgabe wirklich abbrechen?"
-buttonRemove		= "entfernen"
-buttonRemoveConfirm	= "Diese Aufgabe wirklich entfernen?"
+heading					= "Abschliessen"
+labelHours				= "Arbeitsstunden"
+suffixHours				= "h"
+buttonSave				= "speichern und abschliessen"
+buttonSaveConfirm		= "Ist diese Aufgabe wirklich beendet?"
+buttonClose				= "beenden"
+buttonCloseConfirm		= "Ist diese Aufgabe wirklich beendet?"
+buttonCancel			= "abbrechen"
+buttonCancelConfirm		= "Diese Aufgabe wirklich abbrechen?"
+buttonRemove			= "entfernen"
+buttonRemoveConfirm		= "Diese Aufgabe wirklich entfernen?"
 
 [view]
-legend				= "Fakten"
-labelType			= "Typ"
-labelPriority		= "Priorität"
-labelStatus			= "Status"
-labelDayStart		= "Starttag"
-labelDayEnd			= "Endtag"
-labelTimeStart		= "Startzeit"
-labelTimeEnd		= "Endzeit"
-labelHours			= "Arbeitsstunden"
-labelChanged		= "letzte Änderung"
-labelLocation		= "Ort"
-labelReference		= "Referenz"
-labelOwner			= "erstellt von"
-labelWorker			= "zugewiesen an"
-labelViewers		= "sichtbar für"
-labelProjectId		= "Projekt"
-buttonCancel		= "zur Liste"
-buttonEdit			= "bearbeiten"
+legend					= "Fakten"
+labelType				= "Typ"
+labelPriority			= "Priorität"
+labelStatus				= "Status"
+labelDayStart			= "Starttag"
+labelDayEnd				= "Endtag"
+labelTimeStart			= "Startzeit"
+labelTimeEnd			= "Endzeit"
+labelHours				= "Arbeitsstunden"
+labelChanged			= "letzte Änderung"
+labelLocation			= "Ort"
+labelReference			= "Referenz"
+labelOwner				= "erstellt von"
+labelWorker				= "zugewiesen an"
+labelViewers			= "sichtbar für"
+labelProjectId			= "Projekt"
+buttonCancel			= "zur Liste"
+buttonEdit				= "bearbeiten"
 
 [types]
-0					= "Aufgabe"
-1					= "Termin"
+0						= "Aufgabe"
+1						= "Termin"
 
 [priorities]
-0					= "unbekannt"
-1					= "sehr wichtig"
-2					= "wichtig"
-3					= "normal"
-4					= "unwichtig"
-5					= "nice to have"
+0						= "unbekannt"
+1						= "sehr wichtig"
+2						= "wichtig"
+3						= "normal"
+4						= "unwichtig"
+5						= "nice to have"
 
 [states]
--3					= "entfernt"
--2					= "abgebrochen"
--1					= "abgelehnt"
-0					= "neu"
-1					= "angenommen"
-2					= "in Arbeit"
-3					= "abnahmebereit"
-4					= "beendet"
+-3						= "entfernt"
+-2						= "abgebrochen"
+-1						= "abgelehnt"
+0						= "neu"
+1						= "angenommen"
+2						= "in Arbeit"
+3						= "abnahmebereit"
+4						= "beendet"
 
 [filter-orders]
-status				= "Zustand"
-title				= "Titel"
-priority			= "Priorität"
+status					= "Zustand"
+title					= "Titel"
+priority				= "Priorität"
 
 [filter-directions]
-ASC					= "aufsteigend"
-DESC				= "absteigend"
+ASC						= "aufsteigend"
+DESC					= "absteigend"
 
 [list-actions]
-moveLeft			= "1 Tag eher"
-moveRight			= "1 Tag später"
-edit				= "bearbeiten"
-remove				= "entfernen"
+moveLeft				= "1 Tag eher"
+moveRight				= "1 Tag später"
+edit					= "bearbeiten"
+view					= "anzeigen"
+remove					= "entfernen"
 
 [months]
-1					= "Januar"
-2					= "Februar"
-3					= "März"
-4					= "April"
-5					= "Mai"
-6					= "Juni"
-7					= "Juli"
-8					= "August"
-9					= "September"
-10					= "Oktober"
-11					= "November"
-12					= "Dezember"
+1						= "Januar"
+2						= "Februar"
+3						= "März"
+4						= "April"
+5						= "Mai"
+6						= "Juni"
+7						= "Juli"
+8						= "August"
+9						= "September"
+10						= "Oktober"
+11						= "November"
+12						= "Dezember"
 
 [months-short]
-1					= "Jan"
-2					= "Feb"
-3					= "Mär"
-4					= "Apr"
-5					= "Mai"
-6					= "Jun"
-7					= "Jul"
-8					= "Aug"
-9					= "Sep"
-10					= "Okt"
-11					= "Nov"
-12					= "Dez"
+1						= "Jan"
+2						= "Feb"
+3						= "Mär"
+4						= "Apr"
+5						= "Mai"
+6						= "Jun"
+7						= "Jul"
+8						= "Aug"
+9						= "Sep"
+10						= "Okt"
+11						= "Nov"
+12						= "Dez"
 
 [days]
-0					= "Sonntag"
-1					= "Montag"
-2					= "Dienstag"
-3					= "Mittwoch"
-4					= "Donnerstag"
-5					= "Freitag"
-6					= "Samstag"
+0						= "Sonntag"
+1						= "Montag"
+2						= "Dienstag"
+3						= "Mittwoch"
+4						= "Donnerstag"
+5						= "Freitag"
+6						= "Samstag"
 
 [days-short]
-0					= "So"
-1					= "Mo"
-2					= "Di"
-3					= "Mi"
-4					= "Do"
-5					= "Fr"
-6					= "Sa"
+0						= "So"
+1						= "Mo"
+2						= "Di"
+3						= "Mi"
+4						= "Do"
+5						= "Fr"
+6						= "Sa"
 
 [mail-daily]
-subject				= "Aufgaben und Termin"
-heading				= ""
-greeting			= "Hallo %1$s, heute ist %2$s und es gibt etwas zu erledigen."
-textNoTasks			= ""
-textNoEvents		= ""
-headingTasks		= "Du hast heute folgende Aufgaben:"
-headingEvents		= "Heutige Termine:"
-textSignature		= "dein Ceus Media Office"
-suffixTime			= "Uhr"
+subject					= "Aufgaben und Termin"
+heading					= ""
+greeting				= "Hallo %1$s, heute ist %2$s und es gibt etwas zu erledigen."
+textNoTasks				= ""
+textNoEvents			= ""
+headingTasks			= "Du hast heute folgende Aufgaben:"
+headingEvents			= "Heutige Termine:"
+textSignature			= "dein Ceus Media Office"
+suffixTime				= "Uhr"
 
 [mail-update]
-subject				= "Änderung"
-heading				= ""
-greeting			= "Hallo %1$s, eine Aufgabe wurde verändert, der du zugewiesen bist."
-changes				= "Änderungen"
-textSignature       = "dein Ceus Media Office"
+subject					= "Änderung"
+heading					= ""
+greeting				= "Hallo %1$s, eine Aufgabe wurde verändert, der du zugewiesen bist."
+changes					= "Änderungen"
+textSignature   	    = "dein Ceus Media Office"
 
 [mail-new]
-subject				= "Neue Aufgabe"
-heading				= ""
-greeting			= "Hallo %1$s, es gibt eine neue Aufgabe."
-facts				= "Fakten"
-textSignature       = "dein Ceus Media Office"
+subject					= "Neue Aufgabe"
+heading					= ""
+greeting				= "Hallo %1$s, es gibt eine neue Aufgabe."
+facts					= "Fakten"
+textSignature   	    = "dein Ceus Media Office"
 
 [mail-salutes]
-pos0				= "Viel Erfolg!"
-pos1				= "Alles Gute!"
-pos2				= "Hau rein!"
-pos3				= "Kopf hoch!"
-pos4				= "Carpe Diem!"
-pos5				= "Lass krachen!"
-pos6				= "Mach was draus!"
-pos7				= "Klingt machbar."
-pos8				= "Also alles easy-peacy :D"
-pos9				= "Für's Vater... ähm... Für die Firma!"
+pos0					= "Viel Erfolg!"
+pos1					= "Alles Gute!"
+pos2					= "Hau rein!"
+pos3					= "Kopf hoch!"
+pos4					= "Carpe Diem!"
+pos5					= "Lass krachen!"
+pos6					= "Mach was draus!"
+pos7					= "Klingt machbar."
+pos8					= "Also alles easy-peacy :D"
+pos9					= "Am Ende wird es Kuchen geben."
 
-neg0				= "Na super!"
-neg1				= "Und das bei diesem Wetter..."
-neg2				= "Klingt anstrengend :-|"
-neg3				= "Nervt wa? Aber muss ja ;)"
-neg4				= "Na hoffentlich regnet es nicht auch noch..."
-neg5				= "Und dann geht's sicher wieder in die Kneipe, wa?"
+neg0					= "Na super!"
+neg1					= "Und das bei diesem Wetter..."
+neg2					= "Klingt anstrengend :-|"
+neg3					= "Nervt wa? Aber muss ja ;)"
+neg4					= "Na hoffentlich regnet es nicht auch noch..."
+neg5					= "Und dann geht's sicher wieder in die Kneipe, wa?"
