Modules/Hydrogen: Updated module Work:Missions.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -110,6 +110,7 @@ labelViewers			= "sichtbar für"
 labelProjectId			= "Projekt"
 buttonCancel			= "zur Liste"
 buttonEdit				= "bearbeiten"
+buttonCopy				= "kopieren"
 
 [types]
 0						= "Aufgabe"
