--- a/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
+++ b/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
@@ -71,12 +71,15 @@ buttonCancel			= "abbrechen"
 buttonView				= "anzeigen"
 buttonSave				= "speichern"
 buttonRemove			= "entfernen"
+buttonCopy				= "kopieren"
 msgSuccess				= "Der Eintrag wurde gespeichert."
 msgSuccessClosed		= "Der Eintrag wurde geschlossen."
 msgNoContent			= "Der Inhalt fehlt."
 msgInvalidId			= "Der gewählte Eintrag existiert nicht. Weiterleitung zur Übersicht."
 msgInvalidProject		= "Der gewählte Eintrag ist einem fremden Projekt zugewiesen. Weiterleitung zur Übersicht."
 msgNotEditor			= "Das Recht zum Bearbeiten von Aufgaben wurde nicht vergeben."
+msgLocked				= "Dieser Eintrag ist gesperrt, da er gerade von %s bearbeitet wird."
+
 
 [edit-panel-close]
 heading					= "Abschliessen"
