--- a/trunk/modules/Hydrogen/Work/Issues/locales/de/work/issue.ini
+++ b/trunk/modules/Hydrogen/Work/Issues/locales/de/work/issue.ini
@@ -54,6 +54,8 @@ buttonCancel	= "zurück"
 buttonSave		= "speichern"
 
 [edit]
+labelId			= "Nummer"
+labelCode		= "Link-Code"
 labelProject	= "Projekt"
 labelReporter	= "Reporter"
 labelManager	= "Manager"
