Modules/Hydrogen: Updated module Manage:Projects.

--- a/Manage/Projects/locales/de/manage/project.ini
+++ b/Manage/Projects/locales/de/manage/project.ini
@@ -6,11 +6,17 @@
 2					= "in Betrieb"
 3					= "abgeschlossen"
 
+[priorities]
+0					= "unbekannt"
+1					= "sehr wichtig"
+2					= "wichtig"
+3					= "normal"
+4					= "unwichtig"
+5					= "nice to have"
+
 [index]
 heading				= "Projekte"
 buttonAdd			= "neues Projekt"
-
-
 
 [filter]
 heading				= "Filter"
@@ -20,6 +26,7 @@ buttonReset			= "alle"
 
 [filter-orders]
 status				= "Status"
+priority			= "Priorität"
 title				= "Titel"
 createdAt			= "Erstellung"
 modifiedAt			= "Veränderung"
@@ -31,6 +38,7 @@ DESC				= "absteigend"
 [add]
 heading				= "Neues Projekt"
 labelStatus			= "Status"
+labelPriority		= "Priorität"
 labelUrl			= "URL"
 labelTitle			= "Titel"
 labelDescription	= "Beschreibung"
@@ -42,12 +50,14 @@ msgTitleMissing		= "Das Projekt braucht einen Titel."
 msgTitleExisting	= "Ein Projekt mit dem Titel <cite>%s</cite> existiert bereits."
 
 [edit]
-heading				= "Projekt bearbeiten"
+heading				= "Projekt"
 labelStatus			= "Status"
+labelPriority		= "Priorität"
 labelUrl			= "URL"
 labelTitle			= "Titel"
 labelDescription	= "Beschreibung"
 buttonCancel		= "zurück"
+buttonView			= "anzeigen"
 buttonSave			= "speichern"
 
 msgSuccess			= "Gespeichert."
@@ -59,3 +69,14 @@ msgTitleExisting	= "Ein Projekt mit dem Titel <cite>%s</cite> existiert bereits.
 heading				= "Mitarbeiter"
 buttonAdd			= "hinzufügen"
 buttonRemove		= "entfernen"
+
+[view]
+heading				= "Projekt"
+labelStatus			= "Status"
+labelPriority		= "Priorität"
+labelUrl			= "URL"
+labelTitle			= "Titel"
+labelDescription	= "Beschreibung"
+buttonCancel		= "zurück"
+buttonEdit			= "bearbeiten"
+
