Modules/Hydrogen: Updated module Admin:Module:Installer.

--- a/Admin/Module/Installer/locales/de/admin/module/installer.ini
+++ b/Admin/Module/Installer/locales/de/admin/module/installer.ini
@@ -42,6 +42,11 @@ file					= "Datei"
 4						= "Die lokale Datei ist an ein anderes Modul gebunden."
 5						= "Die Datei ist eine Referenz von einem Internet-Server."
 
+[install-types]
+-1						= "unbekannt"
+0						= "Kopie"
+1						= "Verlinkung"
+
 [index]
 heading					= "Modul Installer"
 categoryNone			= "Sonstige"
