Modules/Hydrogen: Updated module Work:Issues.

--- a/Work/Issues/locales/de/work/issue.ini
+++ b/Work/Issues/locales/de/work/issue.ini
@@ -28,17 +28,18 @@
 6		= "geschlossen"
 
 [changes]
-1		= "Beschreibung"
+1		= "Reporter"
 2		= "Manager"
-3		= "Entwickler"
+3		= "Projekt"
 4		= "Typ"
 5		= "Schweregrad"
 6		= "Priorität"
 7		= "Status"
 8		= "Fortschritt"
-9		= "Notiz"
-10		= "Anhang"
-11		= "Patch"
+9		= "Beschreibung"
+10		= "Notiz"
+11		= "Anhang"
+12		= "Patch"
 
 [add]
 labelProject	= "Projekt"
