Modules/Hydrogen: Update module Work:Bills.

--- a/Work/Bills/locales/de/work/bill.ini
+++ b/Work/Bills/locales/de/work/bill.ini
@@ -16,6 +16,8 @@ buttonAdd		= "neue Rechnung"
 
 [index-filter]
 heading			= "Filter"
+labelId			= "ID"
+labelTerm		= "Suchbegriff"
 labelType		= "Typ"
 labelStatus		= "Status"
 labelStart		= "Startdatum"
