Modules/Hydrogen: Updated module Work:Missions.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -17,6 +17,7 @@ buttonFilter		= "filtern"
 buttonReset			= "alle"
 suffixTime			= "Uhr"
 messageLoadingList	= "Lade Aufgaben und Termine..."
+messageNoEntries	= "Keine Einträge gefunden."
 
 [add]
 legend					= "Aufgabe/Termin hinzufügen"
