Modules/Hydrogen: Updated module Admin:Module:Installer.

--- a/Admin/Module/Installer/locales/de/admin/module/installer.ini
+++ b/Admin/Module/Installer/locales/de/admin/module/installer.ini
@@ -60,7 +60,6 @@ labelType				= "Zustand"
 labelVersionInstalled	= "Version installiert"
 labelVersionAvailable	= "Version verfügbar"
 
-
 labelCopy				= "kopieren"
 labelLink				= "einbinden"
 textCopy				= "Das Modul wird kopiert und damit von der Quelle entkoppelt.";
@@ -80,6 +79,12 @@ relationsSupported		= "Module: unterstützt"
 relationAltInstalled	= "Dieses Modul ist bereits installiert."
 relationAltAvailable	= "Dieses Modul kann installiert werden."
 relationAltMissing		= "Dieses Modul ist nicht verfügbar."
+
+[uninstall]
+heading					= "Modul Deinstaller:"
+
+buttonBack				= "zurück"
+buttonUninstall			= "deinstallieren"
 
 [update]
 heading					= "Aktualisierung: "
