Modules/Hydrogen: Updated module Manage:Pages.

--- a/Manage/Pages/locales/de/manage/page.ini
+++ b/Manage/Pages/locales/de/manage/page.ini
@@ -3,6 +3,10 @@
 1			= "Verzweigung (ohne Inhalt)"
 2			= "Modul (dynamische Seite)"
 
+[formats]
+HTML		= "HTML"
+MD			= "Markdown"
+
 [scopes]
 0			= "Hauptnavigation"
 1			= "Fußnavigation"
