--- a/trunk/modules/Hydrogen/Admin/Modules/locales/de/admin/module/viewer.ini
+++ b/trunk/modules/Hydrogen/Admin/Modules/locales/de/admin/module/viewer.ini
@@ -9,6 +9,14 @@
 yes						= "ja"
 no						= "nein"
 
+[details]
+tabGeneral				= "Generell"
+tabResources			= "Dateien"
+tabConfiguration		= "Konfiguration"
+tabDatabase				= "Datenbank"
+tabRelations			= "Abhängigkeiten"
+tabInstances			= "Instanzen"
+
 [install]
 
 labelTitle				= "Titel"
@@ -42,12 +50,6 @@ buttonEdit				= "bearbeiten"
 buttonRemove			= "deinstallieren"
 buttonRemoveConfirm		= "Die Modulkopie oder -referenz wird gelöscht. Wirklich?"
 buttonReload			= "neu laden"
-
-tabGeneral				= "Generell"
-tabResources			= "Dateien"
-tabConfiguration		= "Konfiguration"
-tabDatabase				= "Datenbank"
-tabRelations			= "Abhängigkeiten"
 
 labelTitle				= "Titel"
 labelDescription		= "Beschreibung"
