--- a/Admin/Mail/locales/de/admin/mail/attachment.ini
+++ b/Admin/Mail/locales/de/admin/mail/attachment.ini
@@ -1,5 +1,4 @@
 [states]
-;-1						= "unmöglich"
 0						= "inaktiv"
 1						= "aktiv"
 
@@ -17,6 +16,10 @@ headFile				= "Datei"
 headClass				= "E-Mail-Klasse"
 headCreatedAt			= "angehangen"
 headActions				= "Aktion"
+labelMimeType			= "MIME-Typ:"
+buttonActivate			= "aktivieren"
+buttonDeactivate		= "deaktivieren"
+buttonUnregister		= "abmelden"
 noEntries				= "Keine Anhänge registriert."
 
 [add]
@@ -41,11 +44,14 @@ buttonSave				= "hochladen"
 successAdded			= "Die Datei &quot;%s&quot; wurde als Anhang für die E-Mail-Klasse &quot;%s&quot; registriert."
 successEnabled			= "Der Anhang &quot;%s&quot; wurde für die E-Mail-Klasse &quot;%s&quot; aktiviert."
 successDisabled			= "Der Anhang &quot;%s&quot; wurde für die E-Mail-Klasse &quot;%s&quot; deaktiviert."
+successUnregistered		= "Die Datei &quot;%s&quot; wurde als Anhang für die E-Mail-Klasse &quot;%s&quot; abgemeldet."
 successUploaded			= "Datei wurde hochgeladen. Sie kann nun als Anhang einer E-Mail-Klasse registriert werden."
-successRemoved			= "Die Datei &quot;%s&quot; wurde als Anhang für die E-Mail-Klasse &quot;%s&quot; entfernt."
+successRemoved			= "Die Datei &quot;%s&quot; wurde entfernt."
 errorIdInvalid			= "Dieser Anhang existiert nicht."
 errorClassMissing		= "Keine E-Mail-Klasse angegeben."
 errorFileMissing		= "Keine Datei angegeben."
+errorFileInUse			= "Die Datei &quot;%s&quot; ist noch als Anhang registriert und kann nicht entfernt werden."
 errorAlreadyRegistered	= "Die Datei &quot;%s&quot; ist bereits als Anhang für die E-Mail-Klasse &quot;%s&quot; registriert."
 errorFileNotExisting	= "Die Datei &quot;%s&quot; existiert nicht."
-errorUploadFailed		= "Das Speichern der neuen Datei ist fehlgeschlagen."
+failureUploadFailed		= "Das Speichern der neuen Datei ist fehlgeschlagen."
+failureRemoveFailed		= "Das Entfernen der Datei &quot;%s&quot; ist fehlgeschlagen."
