--- a/Admin/Mail/locales/de/admin/mail/queue.ini
+++ b/Admin/Mail/locales/de/admin/mail/queue.ini
@@ -1,7 +1,7 @@
 [states]
-0					= "neu" 
-1					= "versucht" 
-2					= "gesendet" 
+0					= "neu"
+1					= "versucht"
+2					= "gesendet"
 
 [index]
 heading				= ""
@@ -9,6 +9,7 @@ heading				= ""
 [index-list]
 heading				= "E-Mails"
 formatDate			= "d.m.Y H:i"
+noEntries			= "Keine E-Mails gefunden."
 
 [index-filter]
 heading				= "Filter"
