Improve register view.

--- a/Resource/Authentication/locales/en/auth.ini
+++ b/Resource/Authentication/locales/en/auth.ini
@@ -55,7 +55,7 @@ labelPassword			= "Password"
 labelPassword_title		= "atleast %d characters"
 labelEmail				= "Email address"
 labelGender				= "Gender"
-labelSalutation			= "Anrede / Titel"
+labelSalutation			= "Title"
 labelFirstname			= "Firstname"
 labelSurname			= "Surname"
 labelPostcode			= "Postcode"
