Use bootstrap library from GitHub.

--- a/Manage/Shop/locales/de/manage/shop.ini
+++ b/Manage/Shop/locales/de/manage/shop.ini
@@ -9,6 +9,7 @@ firstname				= "Vorname"
 lastname				= "Nachname"
 email					= "E-Mail-Adresse"
 country					= "Land"
+region					= "Region"
 city					= "Stadt"
 postcode				= "PLZ"
 address					= "Anschrift"
