Improved button coloring, templates, tabs and JS methods.

--- a/Manage/Catalog/locales/de/manage/catalog/article.ini
+++ b/Manage/Catalog/locales/de/manage/catalog/article.ini
@@ -74,70 +74,6 @@ no_entries				= "Keine Einträge gefunden."
 link_add				= "neue Veröffentlichung eintragen"
 link_orphans			= "Artikel ohne gültige Kategorie anzeigen"
 
-
-[add]
-heading					= "Veröffentlichungen"
-caption					= "Veröffentlichung hinzufügen"
-categories				= "Fachbereich / Serie"
-branch_id				= "Fachbereich"
-order_none				= "-- keine --"
-topic					= "Serie"
-volume					= "Band"
-author_id				= "Autor"
-author_new				= "oder neuer Autor"
-title					= "Titel"
-subtitle				= "Untertitel"
-description				= "Beschreibung"
-recension				= "Rezension"
-publication				= "Erscheinungsdatum"
-publication_suffix		= "&nbsp;<small>[(dd.)(mm.)aaaa]</small>"
-status					= "Lieferstatus"
-size					= "Umfang"
-digestion				= "Verarbeitung"
-isn						= "ISBN/ISSN"
-isbn					= "ISBN"
-issn					= "ISSN"
-series					= "Serie/Zeitschrift"
-price					= "Preis"
-price_suffix			= "&nbsp;<small>[ee.cc]&nbsp;&euro;</small>"
-new						= "Neuerscheinung"
-language				= "Sprache"
-button_cancel			= "zur Liste"
-button_save				= "speichern"
-
-
-[edit]
-heading						= "Veröffentlichung"
-caption						= "Veröffentlichung verändern"
-categories					= "Fachbereich / Serie"
-branch_id					= "Fachbereich"
-topic_id					= "Serie"
-volume						= "Band"
-order_none					= "-- keine --"
-author_id					= "Autor"
-title						= "Titel"
-subtitle					= "Untertitel"
-description					= "Beschreibung"
-recension					= "Rezension"
-publication					= "Erscheinungsdatum"
-publication_suffix			= "&nbsp;<small>[(dd.)(mm.)aaaa]</small>"
-status						= "Lieferstatus"
-size						= "Umfang"
-digestion					= "Verarbeitung"
-isn							= "ISBN/ISSN"
-isbn						= "ISBN"
-issn						= "ISSN"
-series						= "Serie/Zeitschrift"
-price						= "Preis"
-price_suffix				= "&nbsp;<small>[ee.cc]&nbsp;&euro;</small>"
-cover						= "Cover-Bilddatei"
-new							= "Neuerscheinung"
-language					= "Sprache"
-button_cancel				= "zur Liste"
-button_edit					= "speichern"
-button_remove				= "entfernen"
-button_remove_confirm		= "Wirklich ?"
-
 [upload]
 caption						= "Coverbild hochladen"
 cover						= "Cover-Bilddatei"
@@ -216,7 +152,7 @@ en							= "&nbsp;(ed.)"
 1							= "Herausgeber"
 
 [add]
-heading						= ""
+heading						= "Neuer Artikel"
 labelStatus					= "Lieferstatus"
 labelTitle					= "Titel"
 labelSubtitle				= "Untertitel"
@@ -265,15 +201,20 @@ msgErrorTitleMissing		= "Der Titel fehlt."
 
 
 [index]
+
+[index.filter]
+heading						= "Filter"
+heading_title				= ""
+
+[index.list]
+heading						= "Artikel"
+heading_title				= "maximal 50"
 buttonAdd					= "neue Veröffentlichung"
 
 [remove]
-
 
 [upload]
 msgSuccess					= "Das Bild wurde gespeichert."
 msgErrorTitleMissing		= "Der Titel fehlt."
 msgErrorExtensionInvalid	= "Folgende Dateitypen sind erlaubt: jpe, jpeg, jpg, png, gif."
 msgErrorUpload				= "Die Datei konnte nicht auf dem Server gespeichert werden."
-
-
