--- a/Manage/Catalog/locales/de/manage/catalog/category.ini
+++ b/Manage/Catalog/locales/de/manage/catalog/category.ini
@@ -1,3 +1,7 @@
+[tabs]
+details				= "Details"
+articles			= "Veröffentlichungen"
+
 
 [visible]
 0						= "unsichtbar"
@@ -35,6 +39,7 @@ msgErrorLabelMissing	= "Die Bezeichnung fehlt."
 msgErrorInvalidId		= "Diese Kategorie existiert nicht."
 
 [index]
+heading					= "Kategorien"
 buttonAdd				= "neue Kategorie"
 
 [remove]
