Apply CSS panels.

--- a/Manage/Shop/locales/de/manage/shop.ini
+++ b/Manage/Shop/locales/de/manage/shop.ini
@@ -5,11 +5,26 @@ shipping				= "Versand"
 reports					= "Auswertung"
 
 [customer]
+institution				= "Institution"
 firstname				= "Vorname"
 lastname				= "Nachname"
-email					= "E-Mail-Adresse"
+email					= "E-Mail"
 country					= "Land"
 region					= "Region"
+phone					= "Telefon"
+fax						= "Telefax"
 city					= "Stadt"
 postcode				= "PLZ"
 address					= "Anschrift"
+
+billing_institution		= "Institution"
+billing_firstname		= "Vorname"
+billing_lastname		= "Nachname"
+billing_email			= "E-Mail"
+billing_country			= "Land"
+billing_region			= "Region"
+billing_phone			= "Telefon"
+billing_fax				= "Telefax"
+billing_city			= "Stadt"
+billing_postcode		= "PLZ"
+billing_address			= "Anschrift"
