Improve attachment handling.

--- a/Admin/Mail/locales/de/admin/mail/attachment.ini
+++ b/Admin/Mail/locales/de/admin/mail/attachment.ini
@@ -17,6 +17,7 @@ headClass				= "E-Mail-Klasse"
 headCreatedAt			= "angehangen"
 headActions				= "Aktion"
 labelMimeType			= "MIME-Typ:"
+labelFileSize			= "Größe:"
 buttonActivate			= "aktivieren"
 buttonDeactivate		= "deaktivieren"
 buttonUnregister		= "abmelden"
