Improve rights map coloring.

--- a/Manage/Users/locales/en/manage/role.ini
+++ b/Manage/Users/locales/en/manage/role.ini
@@ -9,6 +9,15 @@
 64					= "allowed"
 128					= "per default"
 
+[type-right]
+-2                  = "public outside"
+-1                  = "access denied"
+0                   = "not allowed"
+1                   = "role right"
+2                   = "user has full access"
+3                   = "public"
+5                   = "public inside"
+
 [index]
 heading				= "Roles"
 headTitle			= "Name"
