Rearrange templates and text blocks.

--- a/Resource/Authentication/locales/de/auth.ini
+++ b/Resource/Authentication/locales/de/auth.ini
@@ -32,7 +32,7 @@ msgAutoLogout			= "Sie wurden nach längerer Inaktivität automatisch abgemeldet
 
 [password]
 heading					= "Passwort vergessen?"
-labelEmail				= "E-Mail-Adresse <small>verwendet bei Benutzerkonto</small>"
+labelEmail				= "E-Mail-Adresse <small class="muted">(verwendet für Benutzerkonto)</small>"
 buttonSend				= "senden"
 msgSuccess				= "Ein neues Passwort wurde an ihre E-Mail-Adresse geschickt."
 msgNoEmail				= "Bitte geben Sie die <label for="input_password_email">E-Mail-Adresse</label> an, die Sie bei ihrem Benutzerkonto verwendet haben."
@@ -41,7 +41,7 @@ msgSendingMailFailed	= "Die E-Mail mit dem neuen Passwort konnte nicht zugestell
 
 [confirm]
 heading					= "Konto bestätigen"
-labelCode				= "Bestätigungs-Code <small>aus der Bestätigungs-E-Mail</small>"
+labelCode				= "Bestätigungs-Code <small class="muted">(aus der Bestätigungs-E-Mail)</small>"
 buttonSend				= "absenden"
 msgSuccess				= "Ihr Benutzerkonto wurde bestätigt. Sie können sich jetzt einloggen."
 msgInvalidCode			= "Der <label for="input_confirm_code">Bestätigungs-Code</label> ist ungültig."
