--- a/Resource/Authentication/locales/en/auth.ini
+++ b/Resource/Authentication/locales/en/auth.ini
@@ -32,7 +32,7 @@ msgAutoLogout			= "Due to longer inactivity, you have been logged out automatica
 
 [password]
 heading					= "Forgot password?"
-labelEmail				= "Mail address <small>use for registration</small>"
+labelEmail				= "Mail address <small class="muted">(used for registration)</small>"
 buttonSend				= "Send"
 msgSuccess				= "A new password has been set and sent to you by mail."
 msgNoEmail				= "Please enter the <label for="input_password_email">email address</label> you have used for signing up."
@@ -41,7 +41,7 @@ msgSendingMailFailed	= "The email containing the new password could not been sen
 
 [confirm]
 heading					= "Confirm account"
-labelCode				= "Confirmation code <small>send to you by mail</small>"
+labelCode				= "Confirmation code <small class="muted">(send to you by mail)</small>"
 buttonSend				= "Check"
 msgSuccess				= "Your account has been confirmed. You can log in, now."
 msgInvalidCode			= "The <label for="input_confirm_code">confirmation code</label> is invalid."
@@ -55,7 +55,7 @@ labelPassword			= "Password"
 labelPassword_title		= "atleast %d characters"
 labelEmail				= "Email address"
 labelGender				= "Gender"
-labelSalutation			= "Title"
+labelSalutation			= "Anrede / Titel"
 labelFirstname			= "Firstname"
 labelSurname			= "Surname"
 labelPostcode			= "Postcode"
