Finish locale file.

--- a/Resource/Database/Lock/locales/de/database/lock.ini
+++ b/Resource/Database/Lock/locales/de/database/lock.ini
@@ -1,3 +1,12 @@
 [index]
-title		= "Datenbank: Sperren"
+title			= "Datenbank: Sperren"
+heading			= "<span class="muted">Datenbank: </span>Sperren"
+headUser		= "Benutzer"
+headModule		= "Modul"
+headTitle		= "Titel <small class="muted">(oder Subjekt)</small>"
+headDate		= "Datum"
+headActions		= ""
+buttonRemove	= "entfernen"
+moduleUnknown	= "unbekannt"
+noEntries		= "Keine Sperren gefunden."
 
