Disable configuration by user.

--- a/Resource/Database/Lock/locales/de/database/lock.ini
+++ b/Resource/Database/Lock/locales/de/database/lock.ini
@@ -1,3 +1,7 @@
+[module]
+title			= "Datenbank-Sperren"
+config.active	= "Inhalte temporär für andere Benutzer sperren"
+
 [index]
 title			= "Datenbank: Sperren"
 heading			= "<span class="muted">Datenbank: </span>Sperren"
