--- a/Manage/My/User/Settings/locales/en/manage/my/user/setting.ini
+++ b/Manage/My/User/Settings/locales/en/manage/my/user/setting.ini
@@ -1,6 +1,15 @@
 [module]
-title				= "Benutzereinstellungen"
+title					= "User settings"
+tab						= "Settings"
 
 [index]
-legend				= "Einstellungen"
-buttonSave			= "speichern"
+legend					= "Settings"
+buttonResetAlt			= "Reset this setting to default?"
+buttonSave				= "save"
+noSettings				= "<div class="hint-empty"><em>There are no modules installed, which provide user settings.</em></div>"
+
+[update]
+msgErrorNumberTooSmall	= "The given number is too small."
+msgErrorNumberTooLarge	= "The given number is too large."
+msgSuccess				= "You settings have been saved."
+
