Extend by form and save function with backup and restore of originals.

--- a/Admin/Config/locales/en/admin/config.ini
+++ b/Admin/Config/locales/en/admin/config.ini
@@ -2,3 +2,6 @@
 heading				= "Module configuration"
 buttonSave			= "save"
 
+[msg]
+successSaved			= "Settings have been saved."
+successRestored		= "Settings of module %s have been restored."
