Improve module configuration.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -1,11 +1,19 @@
 [module]
 title					= "Aufgaben"
+
+config.format			= "Standard-Format der Beschreibungstexte"
+config.editor.TinyMCE.toolbar	= "HTML-Editor-Funktionsumfang <small class="muted">als Buttons</small>"
+config.editor.TinyMCE.toolbar.optionMinimal		= "Minimal"
+config.editor.TinyMCE.toolbar.optionDefault		= "Normal"
+config.editor.TinyMCE.toolbar.optionExtended	= "Erweitert"
+config.editor.TinyMCE.menubar	= "HTML-Editor-Menülisten anzeigen <small class="muted">mit allen Funktionen</small>"
+config.editor.height	= "Höhe des Beschreibungsfelds <small class="muted">in Pixel</small>"
+
 config.mail.active		= "E-Mails schicken"
 config.mail.html		= "E-Mails im HTML-Format"
+config.mail.changes		= "E-Mails bei Änderungen"
 config.mail.daily		= "Tägliche Status-Mail"
 config.mail.daily.hour	= "Sendestunde der Status-Mail"
-config.mail.changes		= "E-Mails bei Änderungen"
-
 
 [index]
 heading				= "Missionen"
