Improve module configuration.

--- a/Resource/Authentication/locales/de/auth.ini
+++ b/Resource/Authentication/locales/de/auth.ini
@@ -1,8 +1,8 @@
 [module]
 title						= "Authentifikation"
-config.session.refresh		= "Sitzung automatisch erhalten"
+config.logout.auto.minutes	= "Sitzungsdauer <small class="muted">in Minuten</small>"
 config.logout.auto			= "Sitzung automatisch beenden"
-config.logout.auto.minutes	= "Sitzungsdauer in Minuten"
+config.session.refresh		= "Sitzung automatisch erhalten"
 
 [login]
 heading					= "Login"
