--- a/Resource/Authentication/locales/en/auth.ini
+++ b/Resource/Authentication/locales/en/auth.ini
@@ -1,8 +1,8 @@
 [module]
 title						= "Authentication"
-config.session.refresh		= "Keep session alive"
+config.logout.auto.minutes	= "Session duration <small class="muted">in minutes</small>"
 config.logout.auto			= "Close session automatically"
-config.logout.auto.minutes	= "Session duration in minutes"
+config.session.refresh		= "Keep session alive"
 
 [login]
 heading					= "Log in"
