--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -39,8 +39,7 @@ labelDayEnd				= "Endtag"
 labelTime				= "Zeit"
 labelTimeStart			= "Startzeit"
 labelTimeEnd			= "Endzeit"
-labelHoursProjected		= "Stunden geplant"
-labelMinutesProjected	= "Planzeit&nbsp;<small class='muted'>(hh:mm)</small>"
+labelMinutesProjected	= "<abbr title="(hh:mm)">Planzeit</abbr>"
 labelTitle				= "Titel"
 labelContent			= "Beschreibung"
 labelLocation			= "Ort"
@@ -68,8 +67,8 @@ labelTimeStart			= "Startzeit"
 labelTimeEnd			= "Endzeit"
 labelHoursProjected		= "geplant"
 labelHoursRequired		= "benötigt"
-labelMinutesProjected	= "Planzeit&nbsp;<small class='muted'>(hh:mm)</small>"
-labelMinutesRequired	= "Arbeitszeit&nbsp;<small class='muted'>(hh:mm)</small>"
+labelMinutesProjected	= "<abbr title="(hh:mm)">Planzeit</abbr>"
+labelMinutesRequired	= "<abbr title="(hh:mm)">Arbeitszeit</abbr>"
 labelTitle				= "Titel"
 labelContent			= "Beschreibung"
 labelLocation			= "Ort"
