Finish project removal.

--- a/Manage/Projects/locales/de/manage/project.ini
+++ b/Manage/Projects/locales/de/manage/project.ini
@@ -117,6 +117,14 @@ noEntries				= "Keine weiteren Mitarbeiter bei diesem Projekt."
 [view.relations]
 heading					= "Beziehungen"
 
+[remove]
+noRelations				= "Keine verknüpften Einträge gefunden."
+heading					= "Bestätigung"
+buttonCancel			= "zurück"
+buttonRemove			= "endgültig entfernen"
+msgSuccessRemoved		= "Das Projekt &quot;%s&quot; wurde komplett entfernt."
+msgFailureException		= "Die Aktion ist gescheitert. <small class="muted">(%s)</small><br/>Bitte probieren Sie es später noch einmal! "
+
 [mails]
 labelCreatedAt			= "erstellt am"
 labelModifiedAt			= "zuletzt geändert am"
