Complete basic functionality.

--- a/Members/locales/de/member.ini
+++ b/Members/locales/de/member.ini
@@ -1,15 +1,23 @@
+[tabs]
+index					= "Verbindungen"
+search					= "Neue Kontakte"
+
 [user-states]
 -2                      = "abgeschaltet"
 -1                      = "verbannt"
 0                       = "neu"
-1                       = "genehmigt"
+1                       = "aktiviert"
 
 [relation-states]
-
+0						= "keine"
+1						= "angefragt"
+2						= "bestätigt"
+-1						= "abgelehnt"
 
 [view]
 heading					= "Infos"
 buttonCancel			= "zurück"
 buttonRequest			= "Verbindung anfragen"
 buttonRelease			= "Verbindung lösen"
-
+buttonAccept			= "Anfrage annehmen"
+buttonReject			= "Anfrage ablehnen"
