Add tabs and separate views.

--- a/Admin/Mail/locales/de/admin/mail/attachment.ini
+++ b/Admin/Mail/locales/de/admin/mail/attachment.ini
@@ -1,3 +1,8 @@
+[tabs]
+index					= "Anhänge"
+add						= "Neue Zuweisung"
+upload					= "Neue Datei"
+
 [states]
 0						= "inaktiv"
 1						= "aktiv"
@@ -7,8 +12,10 @@ heading					= "Filter"
 labelStatus				= "Verwendung"
 labelClass				= "E-Mail-Klasse"
 labelFile				= "Datei"
+labelLanguage			= "Sprache"
 buttonFilter			= "filtern"
 buttonReset				= "zurücksetzen"
+optAll					= "- alle -"
 
 [index]
 heading					= "Mail-Anhänge"
@@ -22,6 +29,12 @@ buttonActivate			= "aktivieren"
 buttonDeactivate		= "deaktivieren"
 buttonUnregister		= "abmelden"
 noEntries				= "Keine Anhänge registriert."
+
+[index.files]
+heading					= "Dateien"
+labelMimeType			= "MIME-Type"
+labelFileSize			= "Dateigröße"
+noEntries				= "Keine Dateien vorhanden."
 
 [add]
 heading					= "Neuer Anhang"
@@ -38,6 +51,7 @@ labelClass				= "Mail-Klasse"
 labelFile				= "neue Datei"
 labelFolder				= "in Ordner"
 hintMimeType			= "Der MIME-Type wird automatisch festgestellt."
+hintMaxSize				= "Maximale Dateigröße: %s"
 buttonCancel			= "zurück"
 buttonSave				= "hochladen"
 
@@ -52,6 +66,7 @@ errorIdInvalid			= "Dieser Anhang existiert nicht."
 errorClassMissing		= "Keine E-Mail-Klasse angegeben."
 errorFileMissing		= "Keine Datei angegeben."
 errorFileInUse			= "Die Datei &quot;%s&quot; ist noch als Anhang registriert und kann nicht entfernt werden."
+errorFileTooLarge		= "Die Datei ist zu groß <small class="muted">(max. %s)</small>"
 errorAlreadyRegistered	= "Die Datei &quot;%s&quot; ist bereits als Anhang für die E-Mail-Klasse &quot;%s&quot; registriert."
 errorFileNotExisting	= "Die Datei &quot;%s&quot; existiert nicht."
 failureUploadFailed		= "Das Speichern der neuen Datei ist fehlgeschlagen."
