--- a/Manage/Projects/locales/de/manage/project.ini
+++ b/Manage/Projects/locales/de/manage/project.ini
@@ -52,7 +52,7 @@ labelDescription		= "Beschreibung"
 buttonCancel			= "zurück"
 buttonSave				= "speichern"
 
-msgSuccess				= "Gespeichert."
+msgSuccess				= "Das Projekt wurde angelegt. Jetzt können weitere Teilnehmer hinzugefügt werden."
 msgTitleMissing			= "Das Projekt braucht einen Titel."
 msgTitleExisting		= "Ein Projekt mit dem Titel <cite>%s</cite> existiert bereits."
 
