Add support for module Resource:Versions.

--- a/Manage/Pages/locales/de/manage/page.ini
+++ b/Manage/Pages/locales/de/manage/page.ini
@@ -29,6 +29,7 @@ msgErrorIdentifierTaken			= "Der Adresspfad '%s' ist bereits vergeben."
 [edit]
 heading							= ""
 labelEditor						= "HTML-Editor"
+labelVersion					= "Version"
 no_editor						= "Für diese Seite ist kein HTML-Inhalt möglich."
 msgSuccess						= "Die Informationen der Seite <cite>%s</cite> wurden gespeichert."
 msgErrorIdentifierTaken			= "Der <label for="input_identifier">Adresspfad</label> <cite>%s</cite> ist bereits vergeben."
