--- a/Members/locales/de/member.ini
+++ b/Members/locales/de/member.ini
@@ -21,3 +21,9 @@ buttonRequest			= "Verbindung anfragen"
 buttonRelease			= "Verbindung lösen"
 buttonAccept			= "Anfrage annehmen"
 buttonReject			= "Anfrage ablehnen"
+
+[mails]
+onRequest				= "Anfrage nach Verbindung"
+onAccept				= "Anfrage nach Verbindung angenommen"
+onReject				= "Anfrage nach Verbindung abgelehnt"
+onRelease				= "Verbindung beendet"
